--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .primary-input {
-    @apply rounded-full w-full py-3 h-12 m-1 border-gray-200 border-2 pl-5 outline-none ring ring-transparent focus:ring-gray-200 focus:ring-offset-2 transition-shadow placeholder:drop-shadow;
+    @apply rounded-full w-full py-3 h-12 mb-2 mt-5 border-gray-200 border-2 pl-5 outline-none ring ring-transparent focus:ring-gray-200 focus:ring-offset-2 transition-shadow placeholder:drop-shadow;
   }
   .primary-btn {
     @apply w-full mt-5 bg-gray-200 text-black py-2 rounded-full hover:bg-gray-300 active:scale-90 transition-transform font-semibold outline-none;
